--- a/src/scss/_signup.scss
+++ b/src/scss/_signup.scss
@@ -1,78 +1,90 @@
 /* for mobile  */
-@media screen and (max-width:600px) {
 
-
-    .sign-up {
-
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        padding-top: 5rem;
-
-
-    }
-
-
-    .sign-up-form {
-        display: flex;
-        text-align: center;
-        display: flex;
-        text-align: center;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .sign-up-form h2 {
-
-        text-align: center;
-        line-height: 2rem;
-        margin-top: -0.5rem;
-        color: white;
-        font-family: Playfair;
-        font-size: 1.5rem;
-        font-style: italic;
-    }
-
-    .sign-up-form p {
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
-        line-height: 1.5rem;
-        margin-top: 1rem;
-        color: white;
-        font-family: Raleway;
-    }
+.sign-up {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
 }
+
+
+.sign-up-form {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 3%;
+    padding: 2%;
+    text-align: center;
+    width: 80%;
+}
+
+.sign-up-form h2 {
+
+    text-align: center;
+    line-height: 2rem;
+    margin-top: -0.5rem;
+    color: white;
+    font-family: Playfair;
+    font-size: 1.5rem;
+    font-style: italic;
+}
+
+.sign-up-form p {
+    line-height: 1.5rem;
+    color: white;
+    font-family: Raleway;
+}
+
 
 
 form {
     display: flex;
-    flex-direction: row;
-    width: 15rem;
-    height: 2rem;
-    margin-top: 1.5rem;
-    flex-direction: row;
-    display: inline-flex;
+    justify-content: end;
+    min-width: 90%;
+    position: relative;
+    // min-height: 1rem;
+    // min-width: 200px;
 }
 
+button[type="submit"],
+input[type="email"] {
+    border-radius: 1rem;
+}
 
 input[type="email"] {
-    border-radius: 1.5rem;
-    flex-grow: 2;
     border: 0px;
+
+    width: 100%;
+    // padding: 0px;
+
+    //  min-height: 1.5rem;
+
+    width: 100%;
+    padding: 0px 0px 0px 10%;
+    // margin: 8px 0;
+    box-sizing: border-box;
+}
+
+input::placeholder {
+    color: #e2574c;
+    font-size: 0.8em;
+    font-style: italic;
+    padding: 0px;
+    margin: 0px;
+
+
 }
 
 button[type="submit"] {
-    border-radius: 1rem;
+    font-size: 0.8em;
     background: #e2574c;
     border: 0px;
-    width: 5.5rem;
-    height: 1.8rem;
-    margin-left: -6.0rem;
-    margin-top: 0.10rem;
-    margin-bottom: 0.10rem;
+    position: absolute;
     color: white;
-    font-size: 14px;
+    align-self: center;
+    height: 100%;
 
 }
 
@@ -87,121 +99,121 @@ button[type="submit"] {
     align-items: center;
     text-align: center;
     justify-content: center;
-    height: 15rem;
+    height: auto;
 
 }
 
-/* tablet only */
-@media only screen and (max-width: 1240px) and (min-width: 600px) {
+// /* tablet only */
+// @media only screen and (max-width: 1240px) and (min-width: 600px) {
 
 
-    .sign-up {
-        margin-top: 2.5rem;
-    }
+//     .sign-up {
+//         margin-top: 2.5rem;
+//     }
 
-    .form {
-        flex-direction: row;
-        width: 15rem;
-        margin-top: 1.5rem;
-        display: inline-flex;
-    }
+//     .form {
+//         flex-direction: row;
+//         width: 15rem;
+//         margin-top: 1.5rem;
+//         display: inline-flex;
+//     }
 
-    .sign-up p {
-        color: white;
-        font-family: Raleway;
-        font-size: 1rem;
-        margin-top: 1rem;
-    }
+//     .sign-up p {
+//         color: white;
+//         font-family: Raleway;
+//         font-size: 1rem;
+//         margin-top: 1rem;
+//     }
 
-    .sign-up h2 {
-        font-family: PlayfairDisplay;
-        font-size: 2rem;
-        font-style: italic;
-        color: white;
-    }
-}
-
-
-
-/* sign-up for desktop min width:1240px   */
-@media screen and (min-width:1240px) {
-    .sign-up {
-        /* height:30rem; */
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        padding-top: 5rem;
+//     .sign-up h2 {
+//         font-family: PlayfairDisplay;
+//         font-size: 2rem;
+//         font-style: italic;
+//         color: white;
+//     }
+// }
 
 
-    }
+
+// /* sign-up for desktop min width:1240px   */
+// @media screen and (min-width:1240px) {
+//     .sign-up {
+//         /* height:30rem; */
+//         width: 100%;
+//         display: flex;
+//         flex-direction: row;
+//         flex-wrap: wrap;
+//         padding-top: 5rem;
 
 
-    .sign-up-form {
-        display: flex;
-        text-align: center;
-        display: flex;
-        text-align: center;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .sign-up-form h2 {
-
-        text-align: center;
-        line-height: 2.5rem;
-        color: white;
-        font-family: PlayfairDisplay;
-        font-size: 2rem;
-    }
-
-    .sign-up-form p {
-        margin-left: 15rem;
-        margin-right: 15rem;
-        line-height: 2.25rem;
-        color: white;
-        font-family: Raleway;
-    }
+//     }
 
 
-    form {
-        display: flex;
-        flex-direction: row;
-        width: 20rem;
-    }
+//     .sign-up-form {
+//         display: flex;
+//         text-align: center;
+//         display: flex;
+//         text-align: center;
+//         flex-wrap: wrap;
+//         justify-content: center;
+//     }
 
-    input[type="email"] {
-        border-radius: 1.5rem;
-        flex-grow: 2;
-        border: 0px;
-    }
+//     .sign-up-form h2 {
 
-    button[type="submit"] {
-        border-radius: 1rem;
-        background: #e2574c;
-        border: 0px;
-        width: 6rem;
-        height: 2.25rem;
-        margin-left: -6.45rem;
-        margin-top: 0.5rem;
-        margin-bottom: 0.5rem;
-        color: white;
-        font-size: 16px;
+//         text-align: center;
+//         line-height: 2.5rem;
+//         color: white;
+//         font-family: PlayfairDisplay;
+//         font-size: 2rem;
+//     }
 
-    }
+//     .sign-up-form p {
+//         margin-left: 15rem;
+//         margin-right: 15rem;
+//         line-height: 2.25rem;
+//         color: white;
+//         font-family: Raleway;
+//     }
 
-    .sign-up-image-background {
-        background-image: url(/images/wave-bkgd.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: bottom center;
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
 
-    }
+//     form {
+//         display: flex;
+//         flex-direction: row;
+//         width: 20rem;
+//     }
 
-}
+//     input[type="email"] {
+//         border-radius: 1.5rem;
+//         flex-grow: 2;
+//         border: 0px;
+//     }
+
+//     button[type="submit"] {
+//         border-radius: 1rem;
+//         background: #e2574c;
+//         border: 0px;
+//         width: 6rem;
+//         height: 2.25rem;
+//         margin-left: -6.45rem;
+//         margin-top: 0.5rem;
+//         margin-bottom: 0.5rem;
+//         color: white;
+//         font-size: 16px;
+
+//     }
+
+//     .sign-up-image-background {
+//         background-image: url(/images/wave-bkgd.jpg);
+//         background-size: cover;
+//         background-repeat: no-repeat;
+//         background-position: bottom center;
+//         width: 100%;
+//         display: flex;
+//         flex-wrap: wrap;
+//         align-items: center;
+//         text-align: center;
+//         justify-content: center;
+
+//     }
+
+// }
