--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -1,17 +1,37 @@
 /* banner for mobile  */
+.new-section {
+    display: flex;
+    width: 100%;
+}
 
 .banner {
-    background-image: url(/images/banner-girl.png), url(/images/flower-bkgd.jpg);
-    background-size: 8rem, cover;
-    background-repeat: no-repeat, no-repeat;
-    background-position: bottom center, center;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 20rem;
 
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+
+    #bkg {
+        position: relative;
+    }
+
+    #girl {
+        position: absolute;
+        width: 25%;
+    }
+
+}
+
+
+
+img:nth-child(2) {
+    align-self: flex-end;
+
+
+}
+
+.new-collection {
+    position: absolute;
 }
 
 .new-collection p {
@@ -34,47 +54,4 @@
     font-family: PlayfairDisplay;
     font-size: 14px;
     color: white;
-}
-
-/* banner for tablet */
-
-@media screen and (min-width:600px) {
-    .banner {
-        background-image: url(/images/banner-girl.png), url(/images/flower-bkgd.jpg);
-        background-size: contain, cover;
-        background-repeat: no-repeat, no-repeat;
-        background-position: bottom center, center;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 40rem;
-    }
-
-
-
-
-    .new-collection p {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        display: block;
-        z-index: 2;
-        font-family: PlayfairDisplay;
-        color: white;
-        font-size: 1.5rem;
-    }
-
-    .new-collection h1 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        display: block;
-        z-index: 2;
-        font-family: PlayfairDisplay;
-        color: white;
-        font-size: 3rem;
-    }
-
 }
