--- a/src/scss/_categories.scss
+++ b/src/scss/_categories.scss
@@ -1,290 +1,160 @@
-/* mobile first for shopping categories max width 600px*/
+// /* mobile first for shopping categories max width 600px*/
+// //flex
+// .shop-wrapper {
+//     display: flex;
+//     width: 100%;
+//     justify-content: center;
 
+// }
+
+
+
+
+// .shop {
+//     width: 100%;
+//     display: flex;
+//     flex-flow: row wrap;
+//     justify-content: center;
+
+// }
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+// .cat {
+//     color: white;
+//     font-size: 1em;
+//     position: absolute;
+
+//     display: flex;
+//     width: 80%;
+//     justify-content: center;
+// }
+
+
+
+// .men-category,
+// .womens-category {
+//     flex-direction: column;
+//     width: 100%;
+//     display: flex;
+//     justify-content: center;
+//     text-align: center;
+//     align-items: center;
+//     color: white;
+//     text-transform: uppercase;
+//     font-family: Raleway;
+//     font-size: 0.875rem;
+
+//     img {
+//         position: relative;
+
+//     }
+// }
+
+
+
+// .trends-category,
+// .glasses-category,
+// .sales-category,
+// .bags-category {
+
+//     width: 50%;
+//     border: 1px solid white;
+//     display: flex;
+//     align-items: center;
+//     text-align: center;
+//     justify-content: center;
+//     font-size: 14px;
+//     color: white;
+//     text-transform: uppercase;
+
+//     font-family: Raleway;
+//     font-size: 0.875rem;
+
+
+// }
+
+// .test-wrapper {
+//     display: flex;
+//     flex-direction: row;
+//     width: 100%;
+//     flex-wrap: wrap;
+//     justify-content: space-between;
+
+// }
 
 .shop {
-    height: 40rem;
-    width: 100%;
+    display: grid;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+    grid-template-rows: auto;
+
+    img {
+        position: relative;
+    }
+}
+
+
+.trends-category,
+.glasses-category,
+.sales-category,
+.bags-category {
     display: flex;
-    flex-flow: row wrap;
-    align-content: flex-start;
-    object-fit: contain;
-    margin-bottom: 3rem;
 
+    img {
+        position: relative;
+    }
+}
 
+.men-category,
+.womens-category {
+    display: flex;
+    flex-direction: column;
+    grid-column-start: 1;
+    grid-column-end: 5;
 }
 
 .men-category {
-    background-image: url(/images/mens-category.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    flex-grow: 2;
-    height: 25%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 14px;
-    color: white;
-    text-transform: uppercase;
-    margin-bottom: 0.25rem;
-    font-family: Raleway;
-    font-size: 0.875rem;
-
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
-.trends-category {
-    background-image: url(/images/trends-category.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    flex-grow: 1;
-    width: 45%;
-    height: 25%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 14px;
-    color: white;
-    text-transform: uppercase;
-    border-right: 0.25rem solid;
-    font-family: Raleway;
-    font-size: 0.875rem;
-}
-
+.trends-category,
 .glasses-category {
-    background-image: url(/images/glasses-category.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    flex-grow: 1;
-    width: 45%;
-    height: 25%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 14px;
-    color: white;
-    text-transform: uppercase;
-    border-bottom: 0.25rem solid;
-    font-family: Raleway;
-    font-size: 0.875rem;
-
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
-.sales-category {
-    background-image: url(/images/sale-category.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    flex-grow: 1;
-    width: 45%;
-    height: 25%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 14px;
-    color: white;
-    text-transform: uppercase;
-    border-bottom: 0.25rem solid;
-    border-right: 0.25rem solid;
-    font-family: Raleway;
-    font-size: 0.875rem;
-}
-
+.sales-category,
 .bags-category {
-    background-image: url(/images/bags-category.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    flex-grow: 1;
-    width: 45%;
-    height: 25%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 14px;
-    color: white;
-    text-transform: uppercase;
-    border-bottom: 0.25rem solid;
-    font-family: Raleway;
-    font-size: 0.875rem;
-
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
+
 
 .womens-category {
-    background-image: url(/images/womens-category.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    flex-grow: 2;
-    width: 100%;
-    height: 25%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 14px;
-    color: white;
-    text-transform: uppercase;
-    font-family: Raleway;
-    font-size: 0.875rem;
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
 
+
+.trends-category,
+.sales-category {
+    grid-column-start: 1;
+    grid-column-end: 3;
+
+}
+
+.glasses-category,
+.bags-category {
+    grid-column-start: 3;
+    grid-column-end: 5;
 }
 
 
 
-
-/* design for shopping categories on 
- tablet and desktop   */
-
-
-
-@media screen and (min-width:600px) {
-    .shop {
-        height: 30rem;
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        align-content: flex-start;
-        object-fit: contain;
-    }
-
-    .men-category {
-
-        background-image: url(/images/mens-category.jpg);
-
-        height: 50%;
-        width: 45%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        flex-grow: 2;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        font-size: 14px;
-        color: white;
-        text-transform: uppercase;
-        margin-bottom: 0.25rem;
-        border-right: 0.25rem solid;
-        background-position: center;
-        font-family: Raleway;
-        font-size: 1rem;
-    }
-
-    .trends-category {
-        background-image: url(/images/trends-category.jpg);
-
-        height: 50%;
-        width: 20%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        flex-grow: 2;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        font-size: 14px;
-        color: white;
-        text-transform: uppercase;
-        margin-bottom: 0.25rem;
-        ;
-        border-right: 0.25rem solid;
-        background-position: center;
-        font-family: Raleway;
-        font-size: 1rem;
-    }
-
-    .glasses-category {
-        background-image: url(/images/glasses-category.jpg);
-
-        height: 50%;
-        width: 20%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        flex-grow: 2;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        font-size: 14px;
-        color: white;
-        text-transform: uppercase;
-        margin-bottom: 0.25rem;
-        background-position: center;
-        font-family: Raleway;
-        font-size: 1rem;
-    }
-
-    .sales-category {
-
-        background-image: url(/images/sale-category.jpg);
-
-        height: 50%;
-        width: 20%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        flex-grow: 2;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        font-size: 14px;
-        color: white;
-        text-transform: uppercase;
-        margin-bottom: 0.25rem;
-        border-right: 0.25rem solid;
-        background-position: center;
-        font-family: Raleway;
-        font-size: 1rem;
-    }
-
-    .bags-category {
-
-        background-image: url(/images/bags-category.jpg);
-
-        height: 50%;
-        width: 20%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        flex-grow: 2;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        font-size: 14px;
-        color: white;
-        text-transform: uppercase;
-        margin-bottom: 0.25rem;
-        border-right: 0.25rem solid;
-        background-position: center;
-        font-family: Raleway;
-        font-size: 1rem;
-
-    }
-
-    .womens-category {
-        background-image: url(/images/womens-category.jpg);
-
-
-        height: 50%;
-        width: 45%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        flex-grow: 2;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        font-size: 14px;
-        color: white;
-        text-transform: uppercase;
-        margin-bottom: 0.25rem;
-        background-position: center;
-        font-family: Raleway;
-        font-size: 1rem;
-
-    }
- 
+.cat {
+    position: absolute;
 }
