--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -6,131 +6,131 @@
 
  }
 
-
+ .navbar {
+     display: flex;
+     width: 100%;
+     margin: 1%;
+     padding: 1%;
+ }
 
  header {
-
-
      display: flex;
      flex-wrap: wrap;
      flex-direction: row;
      width: 100%;
-     height: 5rem;
+     justify-content: center;
  }
-
 
  .logo {
-     background-image: url(/images/aloha-logo.svg);
-     background-size: contain;
-     background-repeat: no-repeat;
-     background-position: top left;
-     align-items: left;
-     justify-items: left;
-     height: 30px;
-     width: 50%;
-     order: 1;
+     display: flex;
+     justify-content: flex-start;
+     width: 25%;
+     height: 100%;
+
+     img {
+         width: 90%;
+     }
  }
 
+ .menu-cart {
+     display: flex;
+     width: 30%;
+     justify-content: flex-end;
+ }
+
+ .menu-cart-wrapper {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+     width: 50%;
+
+     .navbar-toggler,
+     .cart {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+
+         width: 45%;
+         //  height: 30px;
+     }
+
+     button {
+         border-radius: 0px;
+
+         .fa-solid {
+             font-size: 0.5em;
+         }
+     }
+ }
+
+ .offcanvas.show:not(.hiding) {
+     background-color: #FFF7F8;
+ }
+
+ .navbar-toggler {
+     padding: 0px;
+ }
 
  .cart {
-     background-image: url(/images/cart-icon.svg);
-     background-size: contain;
-     background-position: top right;
-     height: 30px;
-     width: 50%;
-     align-items: right;
-     align-content: right;
+     display: flex;
+     //width: 25%;
      background-repeat: no-repeat;
-     order: 2;
- }
-
-
- .top-navigation-links {
-
-     border-top: 0.15rem solid #d7d7d7;
-     list-style: none;
-     margin-top: 0.3rem;
-     text-align: center;
-     order: 3;
-     width: 100%;
-     height: 3rem;
 
  }
 
- .top-navigation-links li {
-     display: inline;
+
+ .fixed-top {
+     position: static
+ }
+
+ @media screen and (min-width:460px) {
+
+     .menu-cart-wrapper {
+         //  width: 120px;
+         //  height: 40px;
+
+         button,
+         .cart {
+             //  width: 40px;
+             //  height: 40px;
+         }
+
+         button {
+             .fa-solid {
+                 //  font-size: 1.6em;
+             }
+         }
+     }
+
 
  }
 
- .top-navigation-links a {
-     display: inline-block;
-     /* margin-top: 5px; */
-     padding: 0.25rem;
-     margin-top: 0.5rem;
-     color: #e2574c;
-     text-transform: uppercase;
-     font-size: 1rem;
-     text-decoration: none;
-     font-family: Raleway;
-     font-style: bold;
+
+ @media screen and (min-width:820px) {
+     .menu-cart-wrapper {
+         //  width: 150px;
+         //  height: 50px;
+
+         button,
+         .cart {
+             //  width: 50px;
+             //  height: 50px;
+         }
+
+     }
+
+
  }
 
 
-
-
- @media screen and (min-width:600px) {
-
-     header {
-         display: flex;
-         justify-content: space-between;
-         flex-wrap: wrap;
-         flex-direction: row;
-         width: 100%;
-         height: 5rem;
+ @media screen and (min-width:1240px) {
+     .menu-cart-wrapper {
+         button {
+             .fa-solid {
+                 //  font-size: 2.5em;
+             }
+         }
      }
 
-     .logo {
-         background-image: url(/images/aloha-logo.svg);
-         background-size: contain;
-         background-repeat: no-repeat;
-         background-position: top left;
-         order: 1;
-         height: 7rem;
-         width: 7rem;
-     }
-
-     .cart {
-         background-image: url(/images/cart-icon.svg);
-         background-size: contain;
-         height: 50px;
-         width: 15%;
-         border-right: 20px;
-         background-repeat: no-repeat;
-         background-position: top right;
-         order: 3;
-     }
-
-     .top-navigation-links {
-         border-top: none;
-         list-style: none;
-         margin-top: 0.3rem;
-         text-align: center;
-         order: 2;
-         height: 3rem;
-         width: auto;
-     }
-
-     .top-navigation-links li {
-         display: inline;
-
-     }
-
-     .top-navigation-links a {
-         display: inline-block;
-         margin-top: 25px;
-         padding: 10px;
-         color: #e2574c;
-         font-size: 16px;
-     }
 
  }
