--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -14,11 +14,19 @@
  }
 
  header {
+     z-index: 1;
+     background-color: $darkblue;
      display: flex;
      flex-wrap: wrap;
      flex-direction: row;
      width: 100%;
      justify-content: center;
+ }
+
+ .sticky-header {
+     position: -webkit-sticky;
+     position: sticky;
+     top: 0;
  }
 
  .logo {
@@ -49,9 +57,8 @@
          display: flex;
          align-items: center;
          justify-content: center;
-
          width: 45%;
-         //  height: 30px;
+
      }
 
      button {
@@ -73,7 +80,7 @@
 
  .cart {
      display: flex;
-     //width: 25%;
+
      background-repeat: no-repeat;
 
  }
