--- a/src/scss/_signup.scss
+++ b/src/scss/_signup.scss
@@ -37,56 +37,59 @@
     font-family: Raleway;
 }
 
+.sign-up {
+
+    form {
+        display: flex;
+        justify-content: end;
+        min-width: 90%;
+        position: relative;
+        // min-height: 1rem;
+        // min-width: 200px;
+    }
+
+    button[type="submit"],
+    input[type="email"] {
+        border-radius: 1rem;
+    }
+
+    input[type="email"] {
+        border: 0px;
+
+        width: 100%;
+        // padding: 0px;
+
+        //  min-height: 1.5rem;
+
+        width: 100%;
+        padding: 0px 0px 0px 10%;
+        // margin: 8px 0;
+        box-sizing: border-box;
+    }
+
+    input::placeholder {
+        color: #e2574c;
+        font-size: 0.8em;
+        font-style: italic;
+        padding: 0px;
+        margin: 0px;
 
 
-form {
-    display: flex;
-    justify-content: end;
-    min-width: 90%;
-    position: relative;
-    // min-height: 1rem;
-    // min-width: 200px;
+    }
+
+
+    button[type="submit"] {
+        font-size: 0.8em;
+        background: #e2574c;
+        border: 0px;
+        position: absolute;
+        color: white;
+        align-self: center;
+        height: 100%;
+
+    }
 }
 
-button[type="submit"],
-input[type="email"] {
-    border-radius: 1rem;
-}
-
-input[type="email"] {
-    border: 0px;
-
-    width: 100%;
-    // padding: 0px;
-
-    //  min-height: 1.5rem;
-
-    width: 100%;
-    padding: 0px 0px 0px 10%;
-    // margin: 8px 0;
-    box-sizing: border-box;
-}
-
-input::placeholder {
-    color: #e2574c;
-    font-size: 0.8em;
-    font-style: italic;
-    padding: 0px;
-    margin: 0px;
-
-
-}
-
-button[type="submit"] {
-    font-size: 0.8em;
-    background: #e2574c;
-    border: 0px;
-    position: absolute;
-    color: white;
-    align-self: center;
-    height: 100%;
-
-}
 
 .sign-up-image-background {
     background-image: url(/images/wave-bkgd.jpg);
