--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,11 @@
 @import 'reset';
+@import 'colors';
 @import 'nav';
 @import 'banner';
+@import 'search';
 @import 'about';
+@import'travelcategories';
+@import 'offers';
 @import 'categories';
 @import 'caroussel';
 @import 'signup';
