--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -1,15 +1,55 @@
 /* banner for mobile  */
+
+// .body-wrapper {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+//     height: 100%;
+//     background-image: url('/images/blob.svg');
+//     background-size: contain;
+// }
+
+html {
+
+    // background: url('/images/blob.svg') no-repeat center center fixed;
+    // background-repeat: no-repeat;
+    height: auto;
+    // -webkit-background-size: cover;
+    // -moz-background-size: cover;
+    // -o-background-size: cover;
+    background-size: cover;
+    background-color: white;
+}
+
+.carousel-item.active {
+    display: flex;
+}
+
+
+video {
+    width: 100%;
+    height: auto;
+}
+
+.offcanvas {
+    display: none;
+}
+
 .new-section {
     display: flex;
     width: 100%;
+
 }
 
 .banner {
-
+    //background-image: url('/images/banner-girl2.png'), url('/images/flower-bkgd.jpg');
     display: flex;
     align-items: center;
     width: 100%;
+    background-position: bottom;
     justify-content: center;
+    // background-size: contain, cover;
+    // background-repeat: no-repeat;
 
     #bkg {
         position: relative;
@@ -54,4 +94,13 @@ img:nth-child(2) {
     font-family: PlayfairDisplay;
     font-size: 14px;
     color: white;
+}
+
+@media (min-width:600px) {
+
+
+    .new-section {
+        display: flex;
+        width: 100%;
+    }
 }
